# combit

./: .gitignore  CMakeLists.txt  README.txt
src/: CMakeLists.txt  version_combit.h.cmake
src/codata/: CMakeLists.txt  codata.cpp  codata.h  codata_global.h  version_codata.h.cmake
src/cogit/: CMakeLists.txt  coactor.cpp  coactor.h  coblob.cpp  coblob.h  cocommit.cpp  cocommit.h  codiff.cpp  codiff.h  coerrors.cpp  coerrors.h  cogit.cpp  cogit.h  cogit_global.h  cohead.cpp  cohead.h  coobject.cpp  coobject.h  coprocess.cpp  coprocess.h  coref.cpp  coref.h  corepo.cpp  corepo.h  costats.cpp  costats.h  cotag.cpp  cotag.h  cotree.cpp  cotree.h  coutils.cpp  coutils.h  version_cogit.h.cmake
src/gui/: comainwindow.ui  conewrepodialog.h  corepotreewidget.h
src/gui/cogingko/: cofilemanager.h  costatus.h
